# li-toolkit

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TODOS.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
server/: README.md  analytics.py  cli.py  database.py  main.py  mcp_server.py  models.py  pyproject.toml  readability.py  routes.py  services.py  strategy.py
server/tests/: conftest.py  test_analytics.py  test_api.py  test_extended_fields.py  test_models.py  test_readability.py  test_rescraping.py  test_strategy.py
